compiler/test/integration/occurs.err
TypeError in [test/integration/occurs.brm:1.8-1.19]: I32 -> ^g__1 is not a subtype of ^g__1
because TypeError in [test/integration/occurs.brm:1.8-1.19]: Occurs check: unifying ^g__1 with I32 -> ^g__1 would create infinite type.
TypeError in [test/integration/occurs.brm:1.8-1.19]: I32 -> ^g__1 is not a subtype of ^g__1
because TypeError in [test/integration/occurs.brm:1.8-1.19]: Occurs check: unifying ^g__1 with I32 -> ^g__1 would create infinite type.
