compiler/test/integration/occurs.brm
fun foo (_: Int) = foo

